--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="buttons slide-top">Learn more<i class="fas fa-chevron-right btn"></i></div>
     <div class="buttons slide-top">Pre-order<i class="fas fa-chevron-right btn"></i></div>
             </div>
-    <img class="image"src="purp.png" alt="iphone">
+    <img class="image"src="purp.png" alt="iphone" style="z-index:-1">
 
 </main>
 
